organiza arquivos de validação e acrescenta novos

--- a/Javascript/validacoes/CPF/validaCPF2.html
+++ b/Javascript/validacoes/CPF/validaCPF2.html
@@ -44,7 +44,7 @@
 </head>
 <body>
 	<form id="meuform">
-		<input type="text" data-id="NrCpf" disabled name="NrCpf" id="NrCpf" class="form-control" onblur="validarCPF(this);" maxlength="14" />
+		<input type="text" data-id="NrCpf" name="NrCpf" id="NrCpf" class="form-control" onblur="validarCPF(this);" maxlength="14" />
 	</form>
 </body>
 </html>
