--- a/Javascript/Consumo_APIs/projeto-Cad-Endereco/index.html
+++ b/Javascript/Consumo_APIs/projeto-Cad-Endereco/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <form method="post" name="frmEnviar">
+    <form method="post">
         <div class="container">
             <h1>Cadastro de Endereço</h1>
             <!-- CAMPO CEP -->
